# train_rotation_image

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: test.ipynb
src/: dataset.py  model.py  train.py
weights/: best_model.pt
